--- a/css/style1.css
+++ b/css/style1.css
@@ -10,62 +10,8 @@ u{
     text-decoration-color: #007fc8;
 }
 
-.snow-homebg {
-    background: linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.55)),url(homebg.jpg) fixed;
-    width: 100%;
-    height: auto;
-    background-size: cover;
-    position: relative;
-}
-
-.snow,.snow::after,.snow::before {
-    content: "";
-    position: absolute;
-    top: -650px;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 0;
-    background-image: 
-    radial-gradient(4px 4px at 100px 50px, #fff, transparent),
-    radial-gradient(6px 6px at 200px 150px, #fff, transparent),
-    radial-gradient(3px 6px at 300px 250px, #fff, transparent),
-    radial-gradient(4px 4px at 400px 350px, #fff, transparent),
-    radial-gradient(6px 6px at 500px 100px, #fff, transparent),
-    radial-gradient(3px 6px at 50px 200px, #fff, transparent),
-    radial-gradient(4px 4px at 150px 300px, #fff, transparent),
-    radial-gradient(6px 6px at 250px 400px, #fff, transparent),
-    radial-gradient(3px 6px at 350px 500px, #fff, transparent);
-    background-size: 600px 600px;
-    animation: snowanim 3s linear;
-    animation-iteration-count: infinite;
-}
-
-.snow {
-    overflow: hidden;
-}
-
-.snow::after {
-    margin-left: -250px;
-    opacity: 0.5;
-    filter: blur(2px);
-}
-
-.snow::before {
-    margin-left: -350px;
-    opacity: 0.7;
-    filter: blur(1px);
-}
-
-@keyframes snowanim {
-
-    from {
-        transform: translateY(0);
-    }
-
-    to {
-        transform: translateY(650px);
-    }
+.snow-homebg{
+    background: linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.55)),url(homebg.jpg);
 }
 .nav-sec{
     position: fixed;
@@ -83,7 +29,7 @@ u{
 }
 
 .home-head{
-    padding: 220px 0 220px 0;
+    padding: 250px 0 250px 0;
     text-align: center;
     color: #fff;
 }
