--- a/css/style1.css
+++ b/css/style1.css
@@ -1,19 +1,31 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;    
+    box-sizing: border-box;
     font-family: "Heebo", Arial, Helvetica, sans-serif;
 }
 
-    /*home*/
-u{
-    text-decoration-color: #007fc8;
+/*home*/
+/*
+.home-head h1{
+    position: relative;
+}
+.underline{   
+    background: linear-gradient(to right, #6d47ff, #007fc8);
+}
+h1 span.underline{
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    bottom: 0;
+}
+*/
+.snow-homebg {
+    background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(homebg.jpg);
 }
 
-.snow-homebg{
-    background: linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.55)),url(homebg.jpg);
-}
-.nav-sec{
+.nav-sec {
     position: fixed;
     top: 0;
     left: 0;
@@ -21,29 +33,33 @@ u{
     padding: 10px;
     background: rgba(82, 77, 77, 0.589);
 }
-.nav-item a:hover{
-	color: #6d47ff!important;
-}
-.nav-item a{
-	color: #fff!important;
+
+.nav-item a:hover {
+    color: #6d47ff !important;
 }
 
-.home-head{
+.nav-item a {
+    color: #fff !important;
+}
+
+.home-head {
     padding: 250px 0 250px 0;
     text-align: center;
     color: #fff;
 }
-.home-head h1{
+
+.home-head h1 {
     font-size: 100px;
 }
 
 
-        /*Services*/
+/*Services*/
 
-.services{
+.services {
     margin: 70px 0 70px 0;
 }
-.icon iconify-icon{
+
+.icon iconify-icon {
     color: #fff;
     background: linear-gradient(to right, #6d47ff, #007fc8);
     background: cover;
@@ -51,107 +67,131 @@ u{
     border-radius: 8px;
     font-size: 30px;
 }
-.ser-content p{
+
+.ser-content p {
     color: #555;
 }
-.ser-content h3{
+
+.ser-content h3 {
     font-size: 18px;
 }
-.icon:hover{
+
+.icon:hover {
     animation: MoveUpDown 1s linear infinite;
     left: 0;
     bottom: 0;
-  }
-  
-  @keyframes MoveUpDown {
-    0%, 100% {
-      transform: translateY(0);
+}
+
+@keyframes MoveUpDown {
+
+    0%,
+    100% {
+        transform: translateY(0);
     }
+
     50% {
-      transform: translateY(-50px);
+        transform: translateY(-50px);
     }
-  }
+}
 
 
-    /*About section*/
+/*About section*/
 
-.about-sec{
+.about-sec {
     background-color: #000;
     color: #fff;
 }
-.about-head{
+
+.about-head {
     padding-top: 50px;
 }
-.about-row{
+
+.about-row {
     text-align: center;
 }
-.text-about{
+
+.text-about {
     text-decoration-color: linear-gradient(to right, #6d47ff, #007fc8);
 }
-.about-para{
+
+.about-para {
     padding: 20px 0 40px 0;
 }
-.about-link a{
+
+.about-link a {
     text-decoration: none;
     padding: 20px 30px 20px 30px;
     border-radius: 30px;
     background: linear-gradient(to right, #6d47ff, #007fc8);
     color: #fff;
 }
-.about-link{
+
+.about-link {
     padding: 20px 0 30px 0;
 }
-.about-img{
+
+.about-img {
     padding-bottom: 50px;
 }
-.about-img img{
+
+.about-img img {
     width: 100%;
 }
 
 .snow-img {
-    background: linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.55)),url(about1.jpg) fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(about1.jpg) fixed;
 }
-.about-box{
-    color:#fff;
+
+.about-box {
+    color: #fff;
     text-align: center;
     padding: 150px 0 150px 0;
 }
-.idea{
+
+.idea {
     color: #6d47ff;
     font-size: 100px;
 }
-.design{
+
+.design {
     color: #6d47ff;
     font-size: 100px;
 }
-.develop{
+
+.develop {
     color: #6d47ff;
     font-size: 100px;
 }
-.result{
+
+.result {
     color: #6d47ff;
     font-size: 100px;
 }
-.card1:hover{
+
+.card1:hover {
     border: 1px solid #fff;
     border-radius: 20px;
 }
-.icon-box h3{
+
+.icon-box h3 {
     font-weight: 30px;
 }
-.icon-box p{
+
+.icon-box p {
     color: rgb(145, 129, 129);
 }
-.card1{
+
+.card1 {
     position: relative;
-   padding: 20px!important;
+    padding: 20px !important;
 }
-.box{
+
+.box {
     align-items: center;
     padding: 10px;
 }
 
-.about-hover{
+.about-hover {
     background: linear-gradient(to right, #6d47ff, #007fc8);
     position: absolute;
     border-radius: 20px;
@@ -163,25 +203,30 @@ u{
     opacity: 0;
     transition: 0.4s;
 }
-.card1:hover .about-hover{
+
+.card1:hover .about-hover {
     opacity: 1;
 }
 
 
-.container-black{
+.container-black {
     width: 99%;
 }
-.port-img{
+
+.port-img {
     position: relative;
 }
-.port-img img{
+
+.port-img img {
     width: 100%;
     filter: grayscale(100%);
 }
-.port-img img:hover{
+
+.port-img img:hover {
     filter: grayscale(0);
 }
-.port-img-content{
+
+.port-img-content {
     background: linear-gradient(to right, #6d47ff, #007fc8);
     position: absolute;
     left: 0;
@@ -191,27 +236,32 @@ u{
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     opacity: 0;
     transition: 2s;
 }
-.port-img:hover .port-img-content{
+
+.port-img:hover .port-img-content {
     opacity: 1.0;
 }
-.port-img-content h3{
+
+.port-img-content h3 {
     color: #fff;
 }
-.container-second{
-    width: 99%!important;
+
+.container-second {
+    width: 99% !important;
 }
 
-.port3-img img{
+.port3-img img {
     max-width: 100%;
 }
-.num-port{
+
+.num-port {
     padding: 10px;
 }
-.num-port h2{
+
+.num-port h2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -219,16 +269,20 @@ u{
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background: linear-gradient(to right, #6d47ff, #007fc8);;
+    background: linear-gradient(to right, #6d47ff, #007fc8);
+    ;
 }
-.port4-img img{
+
+.port4-img img {
     width: 100%;
 }
-.port4-content{
+
+.port4-content {
     background: linear-gradient(to right, #6d47ff, #007fc8);
     color: #fff;
 }
-.btn a{
+
+.btn a {
     text-decoration: none;
     color: #fff;
     padding: 15px;
@@ -242,21 +296,31 @@ u{
 /*team*/
 
 
-.img-team img{
+.img-team {
+    overflow: hidden;
+}
+
+.img-team img {
     max-width: 100%;
     filter: grayscale(100%);
 }
-.img-team img:hover{
+
+.img-team img:hover {
     filter: grayscale(0);
+    transform: scale(1.1);
+    transition: 1s ease;
 }
-.team-content{
+
+.team-content {
     text-align: center;
 }
-.card-team{
+
+.card-team {
     position: relative;
-    
+
 }
-.team-icon{
+
+.team-icon {
     position: absolute;
     opacity: 0;
     bottom: 0;
@@ -265,17 +329,20 @@ u{
     right: 0;
     transition: 0.4s;
 }
-.team-icon iconify-icon{
+
+.team-icon iconify-icon {
     font-size: 20px;
     color: #fff;
     padding: 10px;
     align-items: center;
 }
-.card-team:hover .team-icon{
+
+.card-team:hover .team-icon {
     opacity: 1;
     top: 280px;
 }
-.facebook{
+
+.facebook {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -284,7 +351,8 @@ u{
     justify-content: center;
     align-items: center;
 }
-.twitter{
+
+.twitter {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -293,7 +361,8 @@ u{
     justify-content: center;
     align-items: center;
 }
-.linkin{
+
+.linkin {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -302,7 +371,8 @@ u{
     justify-content: center;
     align-items: center;
 }
-.google{
+
+.google {
     width: 40px;
     height: 40px;
     border-radius: 50%;
@@ -313,7 +383,7 @@ u{
 }
 
 
-.numeric{
+.numeric {
     background: #000;
     padding: 30px 0 30px 0;
     margin: 20px 0 20px 0;
@@ -328,35 +398,58 @@ u{
 
 
 .snow-contact {
-    background: linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.55)),url(footer.jpg) fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(footer.jpg) fixed;
 }
 
 
 
-.contact{
+.contact {
     color: #fff;
 }
-.form{
-    color:#fff;
+
+.field-set {
+    padding: 0 0 15px 20px;
+    width: 100%;
 }
-.form input{
-    background: rgba(121, 118, 118, 0.041);
+
+.form {
+    padding: 10px 100px;
 }
-.form textarea{
-    background: rgba(121, 118, 118, 0.041);
+
+.field-set input {
+    padding: 10px;
+    background: rgba(143, 137, 137, 0.007);
+    border: solid 1px rgba(255, 255, 255, .2);
 }
-.contact-btn{
-    border-radius: 40px;
-    padding: 10px 30px 10px 30px;
-    text-align: center;
-    margin: auto;
-    width: 150px;
-    background: linear-gradient(to right, #6d47ff, #007fc8);   
+
+.field-set textarea {
+    padding: 10px 70px 110px 10px;
+    background: rgba(143, 137, 137, 0.007);
+    border: solid 1px rgba(255, 255, 255, .2);
 }
-.contact-btn input{
+
+.field-set input:focus, textarea:focus {
+    background: transparent !important;
+    color: #fff !important;
+    outline: 0!important;
+    border-color: rgba(255, 255, 255, .2)!important;
+    box-shadow: none !important;
+}
+
+#submit button {
     color: #fff;
+    padding: 12px;
+    font-weight: 600;
+    width: 180px;
+    border-radius: 30px;
+    background: linear-gradient(to right, #6d47ff, #007fc8);
 }
-.last{
+
+.form-control {
+    padding: 10px;
+}
+
+.last {
     padding: 30px 0 0 0;
     display: flex;
     justify-content: space-evenly;
@@ -364,17 +457,18 @@ u{
 }
 
 
-.footer-icon{
+.footer-icon {
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
-.footer-icon iconify-icon{
-    color:#fff;
+
+.footer-icon iconify-icon {
+    color: #fff;
     font-size: 20px;
 }
 
-.facebook1{
+.facebook1 {
     margin: 10px;
     width: 40px;
     height: 40px;
@@ -384,7 +478,8 @@ u{
     justify-content: center;
     align-items: center;
 }
-.twitter1{
+
+.twitter1 {
     margin: 10px;
     width: 40px;
     height: 40px;
@@ -394,7 +489,8 @@ u{
     justify-content: center;
     align-items: center;
 }
-.linkin1{
+
+.linkin1 {
     margin: 10px;
     width: 40px;
     height: 40px;
@@ -404,7 +500,8 @@ u{
     justify-content: center;
     align-items: center;
 }
-.google1{
+
+.google1 {
     margin: 10px;
     width: 40px;
     height: 40px;
@@ -414,7 +511,8 @@ u{
     justify-content: center;
     align-items: center;
 }
-.rss1{
+
+.rss1 {
     margin: 10px;
     width: 40px;
     height: 40px;
@@ -428,18 +526,29 @@ u{
 
 
 
-@media(min-width:320px){
-    .home-head h1{
+@media(min-width:320px) {
+    .home-head h1 {
         font-size: 30px;
     }
-}
-@media(min-width:690px){
-    .home-head h1{
-        font-size: 60px;
+    .form{
+        padding: 0;
     }
 }
-@media(min-width:1024px){
-    .home-head h1{
+
+@media(min-width:690px) {
+    .home-head h1 {
+        font-size: 60px;
+    }
+    .form{
+        padding: 10px 50px;
+    }
+}
+
+@media(min-width:1024px) {
+    .home-head h1 {
         font-size: 100px;
+    }
+    .form{
+        padding: 10px 100px;
     }
 }
