--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ h1 span.underline{
     color: #fff !important;
 }
 
+.navbar{
+    z-index: 1000;
+}
+
 .home-head {
     padding: 250px 0 250px 0;
     text-align: center;
@@ -270,7 +274,6 @@ h1 span.underline{
     height: 50px;
     border-radius: 50%;
     background: linear-gradient(to right, #6d47ff, #007fc8);
-    ;
 }
 
 .port4-img img {
